--- a/index.ipynb
+++ b/index.ipynb
@@ -572,7 +572,14 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    pass"
+    "\n",
+    "    def derivative_at(terms, x):\n",
+    "    deriv_terms = find_derivative(terms)\n",
+    "    return output_at(deriv_terms, x)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
