--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    deriv_terms = find_derivative(terms)\n",
-    "    deriv_values = \n",
+    "    deriv_values = list(map(lambda x: output_at(list_of_terms, x),x_values))\n",
     "    return output_at(deriv_terms, x)\n",
     "    \n",
     "    \n",
