Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -574,6 +574,10 @@
     "def derivative_function_trace(terms, x_values):\n",
     "\n",
     "    def derivative_at(terms, x):\n",
+    "        \n",
+    "deriv_values = list(map(lambda x: output_at(deriv_terms, x),x_values))        \n",
+    "        \n",
+    "        \n",
     "    deriv_terms = find_derivative(terms)\n",
     "    return output_at(deriv_terms, x)\n",
     "    \n",
