--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,7 @@
     "\n",
     "    def derivative_at(terms, x):\n",
     "        \n",
-    "deriv_values = list(map(lambda x: deriva_at(deriv_terms, x),x_values))        \n",
+    "    deriv_values = list(map(lambda x: derivative_at(terms, x),x_values))        \n",
     "        \n",
     "        \n",
     "    deriv_terms = find_derivative(terms)\n",
