--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -571,7 +571,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivative_function_trace(terms, x_values):        \n",
+    "def derivative_function_trace(terms, x_values):\n",
+    "\n",
+    "    def derivative_at(terms, x):\n",
+    "        \n",
     "    deriv_values = list(map(lambda x: derivative_at(terms, x),x_values))        \n",
     "        \n",
     "        \n",
