Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):        \n",
     "    deriv_values = list(map(lambda x: derivative_at(terms, x),x_values))        \n",
-    "return trace_values(x_values, function_values, mode = 'line')        \n",
+    "    return trace_values(x_values, deriv_values, mode = 'line')        \n",
     "        \n",
     "    deriv_terms = find_derivative(terms)\n",
     "    return output_at(deriv_terms, x)\n",
