--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivative_function_trace(terms, x_values):        \n",
+    "def derivative_function_trace(terms, x_values):   \n",
+    "    \n",
+    "    def find_derivative(function_terms):\n",
+    "    return(list(filter(lambda x: x[1] != 0, (map(find_term_derivative, function_terms)))))\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    deriv_values = list(map(lambda x: derivative_at(terms, x),x_values))        \n",
     "    return trace_values(x_values, deriv_values, mode = 'line')        "
    ]
