--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):   \n",
     "    \n",
-    "    list_of_terms = find_derivative(function_terms):\n",
+    "    list_of_terms = find_derivative(terms):\n",
     "    return(list(filter(lambda x: x[1] != 0, (map(find_term_derivative, function_terms)))))\n",
     "    \n",
     "    \n",
