--- a/index.ipynb
+++ b/index.ipynb
@@ -572,20 +572,11 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):   \n",
-    "    \n",
     "    list_of_terms = find_derivative(terms)\n",
     "    \n",
     "    function_values = list(map(lambda x: output_at(list_of_terms, x),x_values))\n",
     "    \n",
-    "    return trace_values(x_values, function_values, mode = 'line')\n",
-    "    \n",
-    "    \n",
-    "    return(list(filter(lambda x: x[1] != 0, (map(find_term_derivative, function_terms)))))\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    deriv_values = list(map(lambda x: derivative_at(terms, x),x_values))        \n",
-    "    return trace_values(x_values, deriv_values, mode = 'line')        "
+    "    return trace_values(x_values, function_values, mode = 'line')"
    ]
   },
   {
