--- a/index.ipynb
+++ b/index.ipynb
@@ -581,10 +581,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 2), (-11, 0)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "three_x_squared_minus_eleven"
+   ]
   },
   {
    "cell_type": "code",
