Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -601,20 +601,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-33-01e710a1916d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-01e710a1916d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    list(range(-5, 5)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(-5, 5)"
+    "list(range(-5, 5))"
    ]
   },
   {
