Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -604,7 +604,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "find_derivative(thre)"
+   ]
   },
   {
    "cell_type": "code",
