--- a/index.ipynb
+++ b/index.ipynb
@@ -601,12 +601,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1), (0, -1)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_derivative(three_x_squared_minus_eleven)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "find_derivative(thre)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
