Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,7 +624,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "find_derivative"
+   ]
   },
   {
    "cell_type": "code",
