--- a/index.ipynb
+++ b/index.ipynb
@@ -621,11 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1), (0, -1)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "find_derivative"
+    "find_derivative(three_x_squared_minus_eleven)"
    ]
   },
   {
