Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,10 +373,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivative_at(three_x_squared_minus_eleven, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
