--- a/index.ipynb
+++ b/index.ipynb
@@ -632,9 +632,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):   \n",
-    "    list_of_terms = find_derivative(terms)\n",
-    "    print(list_of_terms)\n",
-    "    function_values = list(map(lambda x: output_at(list_of_terms, x),x_values))\n",
+    "    function_values = list(map(lambda x: de(list_of_terms, x),x_values))\n",
     "    \n",
     "    return trace_values(x_values, function_values, mode = 'line')"
    ]
