--- a/index.ipynb
+++ b/index.ipynb
@@ -632,7 +632,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):   \n",
-    "    function_values = list(map(lambda x: de(list_of_terms, x),x_values))\n",
+    "    function_values = list(map(lambda x: deriv_at(list_of_terms, x),x_values))\n",
     "    \n",
     "    return trace_values(x_values, function_values, mode = 'line')"
    ]
