--- a/index.ipynb
+++ b/index.ipynb
@@ -618,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_at(three_x_squared_minus_eleven"
+    "output_at(three_x_squared_minus_eleven, "
    ]
   },
   {
