--- a/index.ipynb
+++ b/index.ipynb
@@ -614,11 +614,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "output_at(three_x_squared_minus_eleven, "
+    "output_at(three_x_squared_minus_eleven, -5)"
    ]
   },
   {
@@ -626,7 +637,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "deri"
+   ]
   },
   {
    "cell_type": "markdown",
