--- a/index.ipynb
+++ b/index.ipynb
@@ -181,17 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return(list(filter(lambda x: x[1] != 0 and , (map(find_term_derivative, function_terms)))))"
+    "    return(list(filter(lambda x: x[1] != 0 and x[0] != 0, (map(find_term_derivative, function_terms)))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[(12, 2)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1), (0, -1)]"
+       "[(6, 1)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
