Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -642,19 +642,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):   \n",
-    "    function_values = list(map(lambda x: deriv_at(list_of_terms, x),x_values))\n",
+    "    function_values = list(map(lambda x: derivative_at(list_of_terms, x),x_values))\n",
     "    \n",
     "    return trace_values(x_values, function_values, mode = 'line')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "[(3, 2), (-11, 0)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "[(6, 1)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "[(6, 1)]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
