Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -642,10 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from calculus import function_values_trace\n",
     "def derivative_function_trace(terms, x_values):   \n",
     "    function_values = list(map(lambda x: derivative_at(terms, x),x_values))\n",
     "    \n",
