Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -650,7 +650,7 @@
     "def derivative_function_trace(terms, x_values):   \n",
     "    function_values = list(map(lambda x: derivative_at(terms, x),x_values))\n",
     "    \n",
-    "    return trace_values(x_values, function_values, mode = 'line')"
+    "    return trace_values(x_values, function_values, mode = 'lines')"
    ]
   },
   {
